[gd_scene load_steps=7 format=3 uid="uid://76sja71fjsp2"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_jfsww"]
[ext_resource type="ArrayMesh" uid="uid://c6t4k3omgds31" path="res://Assets/Models/arrow.res" id="2_8er4n"]
[ext_resource type="Script" path="res://Scripts/player_interaction.gd" id="2_eug8s"]
[ext_resource type="PackedScene" uid="uid://cr60y1pxf3sue" path="res://interface.tscn" id="4_cbukq"]

[sub_resource type="SphereMesh" id="SphereMesh_kdx6p"]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_8epwk"]
radius = 0.1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, -2.22723e-05, -0.000748574, 2.11592e-05, 0.999999, -0.00145971, 0.000748606, 0.0014597, 0.999999, 0, 0, 0)
motion_mode = 1
script = ExtResource("1_jfsww")

[node name="PlayerInteraction" type="Node3D" parent="."]
script = ExtResource("2_eug8s")

[node name="Pointer" type="Node3D" parent="."]
top_level = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pointer"]
cast_shadow = 0
mesh = ExtResource("2_8er4n")
skeleton = NodePath("../..")

[node name="CameraController" type="Node3D" parent="."]
top_level = true

[node name="TwistPivot" type="Node3D" parent="CameraController"]

[node name="PitchPivot" type="Node3D" parent="CameraController/TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController/TwistPivot/PitchPivot"]
collision_mask = 0
spring_length = 5.0
margin = 0.1

[node name="Camera3D" type="Camera3D" parent="CameraController/TwistPivot/PitchPivot/SpringArm3D"]
fov = 90.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("SphereMesh_kdx6p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8epwk")
disabled = true

[node name="Interface" parent="." instance=ExtResource("4_cbukq")]
metadata/_edit_use_anchors_ = true
